# blake-client

./: .gitignore  BUILD.bazel  Dockerfile  WORKSPACE  go_dependencies.bzl  input_generation.sh  output_parser.sh  output_parser_modified.sh  plot.py  plot_m2.py  run_experiments.sh  run_experiments_m2.sh  time-ctags-sha.txt  usage-ctags-blake-8KiB.txt  usage-ctags-sha.txt  usage-libcyaml-blake-8KiB.txt
cmd/blake3zcc_hasher/: BUILD.bazel  main.go
cmd/results_parser/: BUILD.bazel  main.go
csv/: average_hash_false.csv  average_hash_true.csv  average_hash_unoptimised_true.csv  client_upload_1MiB_bytes_uploaded.csv  client_upload_1MiB_true.csv  client_upload_false.csv  client_upload_false_bytes_uploaded.csv  client_upload_total_1MiB_bytes_uploaded.csv  client_upload_total_false_bytes_uploaded.csv  client_upload_total_true_bytes_uploaded.csv  client_upload_true.csv  client_upload_true_bytes_uploaded.csv  execute_false.csv  execute_true.csv  find_missing_1MiB_dirty_true.csv  find_missing_1MiB_true.csv  find_missing_false.csv  find_missing_huge_single_false.csv  find_missing_huge_single_true.bak.csv  find_missing_huge_single_true.csv  find_missing_huge_single_true_1MiB.csv  find_missing_huge_single_true_new.csv  find_missing_true.csv  find_missing_uploaded_huge_single_true.csv  hash.csv  hash_false.csv  hash_true.csv  huge_single_false.csv  huge_single_false_average.csv  huge_single_false_dirty_server_upload.csv  huge_single_false_upload.csv  huge_single_missing_dirty_false.csv  huge_single_missing_dirty_true.csv  huge_single_true.csv  huge_single_true_1MiB_upload.csv  huge_single_true_average.csv  huge_single_true_dirty_server_upload.csv  huge_single_true_upload.csv  rate_false.csv  rate_true.csv  (+33 more)
experiment_logs_huge/: output_e10_2_false.log_parsed.txt  output_e10_2_true.log_parsed.txt  output_e10_3_false.log_parsed.txt  output_e10_3_true.log_parsed.txt  output_e11_2_false.log_parsed.txt  output_e11_2_true.log_parsed.txt  output_e11_3_false.log_parsed.txt  output_e11_3_true.log_parsed.txt  output_e12_2_false.log_parsed.txt  output_e12_2_true.log_parsed.txt  output_e12_3_false.log_parsed.txt  output_e12_3_true.log_parsed.txt  output_e1_0_false.log_parsed.txt  output_e1_0_true.log_parsed.txt  output_e1_1_false.log_parsed.txt  output_e1_1_true.log_parsed.txt  output_e1_2_false.log_parsed.txt  output_e1_2_true.log_parsed.txt  output_e1_3_false.log_parsed.txt  output_e1_3_true.log_parsed.txt  output_e1_4_false.log_parsed.txt  output_e1_4_true.log_parsed.txt  output_e2_2_false.log_parsed.txt  output_e2_2_true.log_parsed.txt  output_e2_3_false.log_parsed.txt  output_e2_3_true.log_parsed.txt  output_e3_2_false.log_parsed.txt  output_e3_2_true.log_parsed.txt  output_e3_3_false.log_parsed.txt  output_e3_3_true.log_parsed.txt  output_e4_0_false.log_parsed.txt  output_e4_0_true.log_parsed.txt  output_e4_1_false.log_parsed.txt  output_e4_1_true.log_parsed.txt  output_e4_2_false.log_parsed.txt  output_e4_2_true.log_parsed.txt  output_e4_3_false.log_parsed.txt  output_e4_3_true.log_parsed.txt  output_e4_4_false.log_parsed.txt  output_e4_4_true.log_parsed.txt  (+32 more)
experiment_logs_huge_single/: output_e10_0_false.log.1  output_e10_0_false.log.2  output_e10_0_false.log.3  output_e10_0_false.log.4  output_e10_0_false.log.5  output_e10_0_false.log_parsed.txt  output_e10_0_true.log.1  output_e10_0_true.log.10  output_e10_0_true.log.11  output_e10_0_true.log.2  output_e10_0_true.log.3  output_e10_0_true.log.4  output_e10_0_true.log.5  output_e10_0_true.log.7  output_e10_0_true.log.8  output_e10_0_true.log.9  output_e10_0_true.log_parsed.txt  output_e10_4_false.log.0  output_e10_4_false.log.1  output_e10_4_true.log.0  output_e10_4_true.log.1  output_e11_0_false.log.1  output_e11_0_false.log.2  output_e11_0_false.log.3  output_e11_0_false.log.4  output_e11_0_false.log.5  output_e11_0_false.log_parsed.txt  output_e11_0_true.log.1  output_e11_0_true.log.10  output_e11_0_true.log.11  (+236 more)
pkg/blobuploader/: BUILD.bazel  blob_uploader.go
(+745 files in other folders)
