load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/sdclarke/blake-client/cmd/blake3zcc_hasher",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/blobuploader:go_default_library",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/digest:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "blake3zcc_hasher",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
