load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "blake3zcc_hasher_lib",
    srcs = ["main.go"],
    importpath = "github.com/sdclarke/blake-client/cmd/blake3zcc_hasher",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/blobuploader",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_buildbarn_bb_storage//pkg/digest",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_binary(
    name = "blake3zcc_hasher",
    embed = [":blake3zcc_hasher_lib"],
    visibility = ["//visibility:public"],
)
