load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/sdclarke/blake-client/cmd/results_parser",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "results_parser",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
