load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "results_parser_lib",
    srcs = ["main.go"],
    importpath = "github.com/sdclarke/blake-client/cmd/results_parser",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "results_parser",
    embed = [":results_parser_lib"],
    visibility = ["//visibility:public"],
)
